--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -167,7 +167,7 @@ In linear algebra we can utilize matrix multiplication to transform a matrix row
 \end{talign}
 
 #+LATEX: \noindent
-swaps the rows of the right hand side matrix. Utilizing this technique we can define similar transformation matrices for scaling rows and adding multiples of one row to another. The process of Gauss-Jordan elimination utilizes these transformations to convert matrices to a canonical form where leading entries are 1 and 0s are present both above and below each leading entry. This form is called the reduced row-echelon form. If the matrix is fully reducible, then for a matrix with $n$ rows, the first $n$ columns form an identity matrix of size $n$. Thus, for an $n \times n$ matrix $M$, the given result of applying transformations $T_1$ to $T_i$ is the identity matrix $\symbf{I}_n$,
+swaps the rows of the right hand side matrix. Utilizing this technique we can define similar transformation matrices for scaling rows and adding multiples of one row to another (hence shifting a row by a multiple of another). The process of Gauss-Jordan elimination utilizes these transformations to convert matrices to a canonical form where leading entries are 1 and 0s are present both above and below each leading entry. This form is called the reduced row-echelon form. If the matrix is fully reducible, then for a matrix with $n$ rows, the first $n$ columns form an identity matrix of size $n$. Thus, for an $n \times n$ matrix $M$, the given result of applying transformations $T_1$ to $T_i$ is the identity matrix $\symbf{I}_n$,
 
 \begin{talign}
     T_n \dotsm T_2 T_1 M & = \symbf{I}_n
@@ -190,28 +190,29 @@ Rather than performing the full matrix multiplication for every Gauss-Jordan ope
 While the combination matrix of all transformation $T_1 T_2 \dotsm T_n$ is unique, the individual operations are not. For example
 
 \begin{talign}
-    T_{R_1 = 2R_1} T_{\textbf{swap}(R_1, R_2)}
+    T_{R_1 \gets 2R_1} T_{\textbf{swap}(R_1, R_2)}
     & = T_{\textbf{swap}(R_1, R_2)} T_{R_2 \gets 2R_2}
 \end{talign}
 
 #+LATEX: \noindent
-For this reason, there are many methods of deriving a combination of operations. For this research we focus on the algorithm utilized by Sharma et al [cite:@sharma:2013] given in [[algo-1]].
+Thus, there are many methods of deriving a combination of operations. For this research we focus on the algorithm utilized by Sharma et al [cite:@sharma:2013] given in (Algorithm [[algo-1]]).
 
 #+CAPTION: Gauss-Jordan Elimination
 #+NAME: algo-1
 \begin{algorithm*}
     \KwIn{An augmented matrix $M$ that has $n$ rows}
     \ForEach{row $R_i$ in $M$}{
-        \tcp{Swap our current row for one with a non-zero $i\text{th}$ column.}
+        \tcp{Step 1: Swap our current row for one with a non-zero $i\text{th}$ column.}
         Find $R_k$ where $R_{ki} \neq 0$
 
         $\textbf{swap}(R_i, R_k)$
 
-        \tcp{Divide our current row by its $i\text{th}$ element.}
+        \tcp{Step 2: Divide our current row by its $i\text{th}$ element.}
         $R_i \gets R_i / R_{ii}$
 
-        \tcp{From every other row subtract that rows $i\text{th}$ element times the $i\text{th}$ row.}
+        \tcp{Step 3: From every other row}
         \ForEach{row $R_j$ in $M$ where $j \neq i$}{
+            \tcp{Step 3.1: subtract the $R_{ji}$ multiple of the $i\text{th}$ row.}
             $R_j \gets R_j - R_{ji} \times R_i$
         }
     }
