--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -184,6 +184,7 @@ A better approach, introduced by **Cuneo and Bailey [cite:@cuneo:2024]**, handle
 
 In linear algebra we can utilize matrix multiplication to transform a matrix row-by-row. For instance the multiplication
 
+#+NAME: swap
 \begin{talign}
     \begin{bmatrix} 0 & 1 \\ 1 & 0 \end{bmatrix}
     \begin{bmatrix} a & b \\ c & d \end{bmatrix}
@@ -191,7 +192,23 @@ In linear algebra we can utilize matrix multiplication to transform a matrix row
 \end{talign}
 
 #+LATEX: \noindent
-swaps the rows of the right hand side matrix. Utilizing this technique we can define similar transformation matrices for scaling rows and adding multiples of one row to another (hence shifting a row by a multiple of another). The process of Gauss-Jordan elimination utilizes these transformations to convert matrices to a canonical form where leading entries are 1 and 0s are present both above and below each leading entry. This form is called the reduced row-echelon form. If the matrix is fully reducible, then for a matrix with $n$ rows, the first $n$ columns form an identity matrix of size $n$. Thus, for an $n \times n$ matrix $M$, the given result of applying transformations $T_1$ to $T_i$ is the identity matrix $\symbf{I}_n$,
+swaps the rows of the right hand side matrix. Utilizing this technique we can define similar transformation matrices for scaling rows and adding multiples of one row to another (hence shifting a row by a multiple of another).
+
+1. Swap one row with another (See [[swap]])
+2. Scale a row
+   \begin{talign}
+       \begin{bmatrix} 2 & 0 \\ 0 & 1 \end{bmatrix}
+       \begin{bmatrix} a & b \\ c & d \end{bmatrix}
+       & = \begin{bmatrix} 2a & 2b \\ c & d \end{bmatrix}
+   \end{talign}
+3. Shift a row by a multiple of another
+   \begin{talign}
+       \begin{bmatrix} 1 & 0 \\ 3 & 1 \end{bmatrix}
+       \begin{bmatrix} a & b \\ c & d \end{bmatrix}
+       & = \begin{bmatrix} a & b \\ c+3a & d+3b \end{bmatrix}
+   \end{talign}
+
+The process of Gauss-Jordan elimination utilizes these transformations to convert matrices to a canonical form where leading entries are 1 and 0s are present both above and below each leading entry. This form is called the reduced row-echelon form. If the matrix is fully reducible, then for a matrix with $n$ rows, the first $n$ columns form an identity matrix of size $n$. Thus, for an $n \times n$ matrix $M$, the given result of applying transformations $T_1$ to $T_i$ is the identity matrix $\symbf{I}_n$,
 
 \begin{talign}
     T_n \dotsm T_2 T_1 M & = \symbf{I}_n
@@ -213,9 +230,10 @@ Rather than performing the full matrix multiplication for every Gauss-Jordan ope
 
 While the combination matrix of all transformation $T_1 T_2 \dotsm T_n$ is unique, the individual operations are not. For example
 
+#+NAME: non-unique
 \begin{talign}
-    T_{R_1 \gets 2R_1} T_{\textbf{swap}(R_1, R_2)}
-    & = T_{\textbf{swap}(R_1, R_2)} T_{R_2 \gets 2R_2}
+    T_{R_1 \gets 2R_1} T_{\textit{swap}(R_1, R_2)}
+    & = T_{\textit{swap}(R_1, R_2)} T_{R_2 \gets 2R_2}
 \end{talign}
 
 #+LATEX: \noindent
