Add another paragraph to Parallel Gauss-Jordan

--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -266,6 +266,8 @@ The parallel Gauss-Jordan method, introduced by Sharma et al. [cite:@sharma:2013
 
 For our remaining operations, /step 2/ performs a scale on the $i\text{th}$ row, while the loop, /step 3/, performs a shift on every other row. Scaling is algebraically equivalent to scalar multiplication on a vector and thus scaling operations are associative with each other following the associativity of scalar multiplication. Shifting operations consist of a multiplication followed by an addition; since multiplication and addition together are not strictly associative it seems that shift operations are non-associative. However, it is also possible to perform operations in parallel if they are linearly independent. Each operation has a strict set of rows that it operates on so we can consider an operation linearly independent from operations on other rows. The shift operation technically operates on two rows but only transforms one of those rows. Thus shift operations can generally be considered linearly independent with other shift operations that utilize the same multiple row, but not with operations that modify the row. Therefore, /step 2/ and /step 3/ necessitate serial execution due to their shared operation on the row, whereas all /step 3.1/ actions can be carried out in parallel, given their linear independence.
 
+So far we have been assuming row operations are atomic in that they perform operations on whole rows all at once. However, large enough matrices will necessitate that we split row operations into two or more step in order to process the entire row. This presents a problem in both /step 2/ and /step 3.1/ because we assume that the $i\text{th}$ element of the operated row has not been modified during the operation. Therefore we must either ensure that the $i\text{th}$ element is modified last or that we store the $i\text{th}$ element elsewhere before performing the operation.
+
 *** TODO In-Place Gauss-Jordan
 
 ** TODO SIMT Programming
