--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -94,6 +94,12 @@ Tight Align
 #+LATEX_HEADER: \newenvironment{talign}{\begin{equation}\begin{aligned}}{\end{aligned}\end{equation}}
 #+LATEX_HEADER: \newenvironment{talign*}{\[\begin{aligned}}{\end{aligned}\]}
 
+Separated Matrices
+#+LATEX_HEADER: \usepackage{nicematrix}
+
+Fancy fractions
+#+LATEX_HEADER: \usepackage{xfrac}
+
 **** Theorems
 
 #+LATEX_HEADER: \usepackage{amsthm}
@@ -232,7 +238,7 @@ Thus, there are many methods of deriving a combination of operations. For this r
 \begin{algorithm*}[b]
     \KwIn{An augmented matrix $M$ that has $n$ rows}
     \ForEach{row $R_i$ in $M$}{
-        \tcp{Step 1: Swap our current row for one with a non-zero $i\text{th}$ column.}
+        \tcp{Step 1: Swap our current row for one with a non-zero $i\text{th}$ element.}
         Find $R_k$ where $R_{ki} \neq 0$
 
         $\text{swap}(R_i, R_k)$
@@ -256,7 +262,57 @@ For our remaining operations, /step 2/ performs a scale on the $i\text{th}$ row,
 
 So far we have been assuming row operations are atomic in that they perform operations on whole rows simultaneously. However, large enough matrices will necessitate that we split row operations into two or more step in order to process the entire row. This presents a problem in both /step 2/ and /step 3.1/ because we assume that the $i\text{th}$ element of the targeted row has not been modified during the operation. Therefore we must either ensure that the $i\text{th}$ element is modified last or that we store the $i\text{th}$ element elsewhere before performing the operation.
 
-*** TODO In-Place Gauss-Jordan
+*** In-Place Gauss-Jordan
+
+In the Gauss-Jordan method introduced above we operate on the matrix $M|\symbf{I}$ and utilize (Algorithm [[algo-1]]) to transform it to $\symbf{I}|M^{-1}$. However, the only resulting component of the matrix we care about is $M$. Further, after each iteration of the outer loop in our algorithm, half of our augmented matrix will be columns of the identity matrix. For example, given the matrix
+\begin{talign}
+    A = \begin{bNiceArray}{ccc|ccc}
+        1 & 0 & 1 & 1 & 0 & 0 \\
+        0 & 2 & 1 & 0 & 1 & 0 \\
+        1 & 1 & 1 & 0 & 0 & 1
+    \end{bNiceArray}
+\end{talign}
+after 2 iterations of the outer loop we will end up with
+\begin{talign}
+    A = \begin{bNiceArray}{ccc|ccc}
+        1 & 0 & 1 & 1 & 0 & 0 \\
+        0 & 1 & \sfrac{1}{2} & 0 & \sfrac{1}{2} & 0 \\
+        0 & 0 & -\sfrac{1}{2} & -1 & -\sfrac{1}{2} & 1
+    \end{bNiceArray}
+\end{talign}
+The first 2 columns have already been inverted by the algorithm and the last column has been untouched, thus those columns put together form the identity matrix. Therefore, at every step we are wasting computational time and space processing columns of the identity matrix.
+
+The in-place method introduced by DasGupta [cite:@dasgupta:2013] saves us this extra computation by storing the only the column of the inverse necessary to complete each iteration. To perform the in-place method we start with the matrix $M$ and perform the updated algorithm shown in (Algorithm [[algo-2]]). At the beginning of each iteration $i$, we add an additional /step 0/ where we store the $i\text{th}$ column of the matrix and replace it with the $i\text{th}$ column of the identity. In /step 1/ we additionally swap the stored $i$ and $k$ elements. Then, in /step 2/ we divide by the stored $i\text{th}$ element rather than its current value. And finally in /step 3.1/ we multiply by the $j\text{th}$ stored element rather than the $i\text{th}$ element of the $j\text{th}$ row.
+
+#+CAPTION: In-Place Gauss-Jordan Elimination
+#+NAME: algo-2
+\begin{algorithm*}[b]
+    \KwIn{An augmented matrix $M$ that has $n$ rows}
+    \ForEach{row $R_i$ in $M$}{
+        \tcp{Step 0: Store the $i\text{th}$ column in $C$.}
+        \ForEach{row $R_m$ in $M$}{
+            $C_m \gets R_{mi}$
+
+            $R_{mi} \gets \symbf{I}_{mi}$
+        }
+
+        \tcp{Step 1: Swap our current row for one with a non-zero $i\text{th}$ element.}
+        Find $R_k$ where $R_{ki} \neq 0$
+
+        $\text{swap}(R_i, R_k)$
+
+        $\text{swap}(C_i, C_k)$
+
+        \tcp{Step 2: Divide our current row by its $i\text{th}$ element.}
+        $R_i \gets R_i / C_i$
+
+        \tcp{Step 3: From every other row}
+        \ForEach{row $R_j$ in $M$ where $j \neq i$}{
+            \tcp{Step 3.1: subtract the $R_{ji}$ multiple of the $i\text{th}$ row.}
+            $R_j \gets R_j - C_j \times R_i$
+        }
+    }
+\end{algorithm*}
 
 ** TODO SIMT Programming
 
