Initial deliveriable paragraph

--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -340,9 +340,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 ** TODO Deliverables
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci eu lobortis elementum nibh tellus molestie nunc non. Neque aliquam vestibulum morbi blandit cursus risus at ultrices. Aliquet bibendum enim facilisis gravida neque convallis a cras. Etiam erat velit scelerisque in dictum non. Sed turpis tincidunt id aliquet risus. Eu volutpat odio facilisis mauris. Duis at consectetur lorem donec massa sapien. Id aliquet risus feugiat in ante. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Commodo nulla facilisi nullam vehicula ipsum a arcu. Pharetra vel turpis nunc eget lorem dolor sed viverra ipsum. Suspendisse ultrices gravida dictum fusce ut. Feugiat scelerisque varius morbi enim. Tincidunt arcu non sodales neque sodales ut.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci eu lobortis elementum nibh tellus molestie nunc non. Neque aliquam vestibulum morbi blandit cursus risus at ultrices. Aliquet bibendum enim facilisis gravida neque convallis a cras. Etiam erat velit scelerisque in dictum non. Sed turpis tincidunt id aliquet risus. Eu volutpat odio facilisis mauris. Duis at consectetur lorem donec massa sapien. Id aliquet risus feugiat in ante. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Commodo nulla facilisi nullam vehicula ipsum a arcu. Pharetra vel turpis nunc eget lorem dolor sed viverra ipsum. Suspendisse ultrices gravida dictum fusce ut. Feugiat scelerisque varius morbi enim. Tincidunt arcu non sodales neque sodales ut.
+In the process of this research we developed three milestone implementations of matrix inversion. These implementations served as demonstration of our understanding of the problem and as validation of the results of our research. The first implementation, titled ~cpu-inverse~, performs Algorithm [[algo-2]] in a single serial CPU thread. The ~cpu-inverse~ program proves the validity of the inverse algorithm and was useful in troubleshooting race conditions with the parallel programs. The next program, ~inverse~, implements Algorithm [[algo-2]] on-GPU utilizing standard CPU-based kernel synchronization. The ~inverse~ implementation can be likened to the results of Sharma et al. [cite:@sharma:2013] with the optimization provided by DasGupta [cite:@dasgupta:2013]. The final program, ~tdr-inverse~, culminates the results of this research and utilizes the ~Harmonize~ library (See [[#harm]]) to optimize matrix inversion with Thread-Data Remapping.
 
 ** TODO Performance Analysis
 
