--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -340,7 +340,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 ** TODO Deliverables
 
-In the process of this research we developed three milestone implementations of matrix inversion. These implementations served as demonstration of our understanding of the problem and as validation of the results of our research. The first implementation, titled ~cpu-inverse~, performs Algorithm [[algo-2]] in a single serial CPU thread. The ~cpu-inverse~ program proves the validity of the inverse algorithm and was useful in troubleshooting race conditions with the parallel programs. The next program, ~inverse~, implements Algorithm [[algo-2]] on-GPU utilizing standard CPU-based kernel synchronization. The ~inverse~ implementation can be likened to the results of Sharma et al. [cite:@sharma:2013] with the optimization provided by DasGupta [cite:@dasgupta:2013]. The final program, ~tdr-inverse~, culminates the results of this research and utilizes the ~Harmonize~ library (See [[#harm]]) to optimize matrix inversion with Thread-Data Remapping.
+During the research, we developed three key implementations of matrix inversion. These implementations demonstrated our understanding of the problem and validated our research results. The first implementation, called ~cpu-inverse~, runs Algorithm [[algo-2]] in a single serial CPU thread. This program verified the validity of the inverse algorithm and helped in troubleshooting race conditions in the parallel implementations. The next program, ~inverse~, applies Algorithm [[algo-2]] on the GPU using standard CPU-based kernel synchronization. This implementation is comparable to the work of Sharma et al. [cite:@sharma:2013], with the optimizations from DasGupta [cite:@dasgupta:2013]. The final program, ~tdr-inverse~, summarizes our research results and uses the ~Harmonize~ library (See [[#harm]]) to optimize matrix inversion through Thread-Data Remapping.
 
 ** TODO Performance Analysis
 
