Split some paragraphs

--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -260,7 +260,9 @@ Thus, there are many methods of deriving a combination of operations. For this r
 
 The parallel Gauss-Jordan method, introduced by Sharma et al. [cite:@sharma:2013], leverages the algorithm outlined in (Algorithm [[algo-1]]) by executing each set of associative row operations concurrently. To determine the sets of operations that exhibit associativity and can thus be executed in parallel, we will assume everything is associative and disprove individual cases. The first evident disproof arises with the swap operation, which, as demonstrated in (Eqn [[non-unique]]), lacks associativity with other operations on the affected rows. Thus in our algorithm the swap, denoted /step 1/, must be taken in serial with its surrounding operations. This further causes the enclosing loop at line 1 to be serial; since each iteration introduces a new swap operation.
 
-For our remaining operations, /step 2/ performs a scale on the $i\text{th}$ row, while the loop, /step 3/, performs a shift on every other row. Scaling is algebraically equivalent to scalar multiplication on a vector and thus scaling operations are associative with each other following the associativity of scalar multiplication. Shifting operations consist of a multiplication followed by an addition; since multiplication and addition together are not strictly associative it seems that shift operations are non-associative. However, it is also possible to perform operations in parallel if they are linearly independent. Each operation has a strict set of rows that it operates on so we can consider an operation linearly independent from operations on other rows. The shift operation technically operates on two rows but only transforms one of those rows. Thus shift operations can generally be considered linearly independent with other shift operations that utilize the same multiple row, but not with operations that modify the row. Therefore, /step 2/ and /step 3/ necessitate serial execution due to their shared operation on the row, whereas all /step 3.1/ actions can be carried out in parallel, given their linear independence.
+For our remaining operations, /step 2/ performs a scale on the $i\text{th}$ row, while the loop, /step 3/, performs a shift on every other row. Scaling is algebraically equivalent to scalar multiplication on a vector and thus scaling operations are associative with each other following the associativity of scalar multiplication. Shifting operations consist of a multiplication followed by an addition; since multiplication and addition together are not strictly associative it seems that shift operations are non-associative.
+
+However, it is also possible to perform operations in parallel if they are linearly independent. Each operation has a strict set of rows that it operates on so we can consider an operation linearly independent from operations on other rows. The shift operation technically operates on two rows but only transforms one of those rows. Thus shift operations can generally be considered linearly independent with other shift operations that utilize the same multiple row, but not with operations that modify the row. Therefore, /step 2/ and /step 3/ necessitate serial execution due to their shared operation on the row, whereas all /step 3.1/ actions can be carried out in parallel, given their linear independence.
 
 So far we have been assuming row operations are atomic in that they perform operations on whole rows simultaneously. However, large enough matrices will necessitate that we split row operations into two or more step in order to process the entire row. This presents a problem in both /step 2/ and /step 3.1/ because we assume that the $i\text{th}$ element of the targeted row has not been modified during the operation. Therefore we must either ensure that the $i\text{th}$ element is modified last or that we store the $i\text{th}$ element elsewhere before performing the operation.
 
@@ -284,7 +286,9 @@ after 2 iterations of the outer loop we will end up with
 \end{talign}
 The first 2 columns have already been inverted by the algorithm and the last column has been untouched, thus those columns put together form the identity matrix. Therefore, at every step we are wasting computational time and space processing columns of the identity matrix.
 
-The in-place method introduced by DasGupta [cite:@dasgupta:2013] saves us this extra computation by storing the only the column of the inverse necessary to complete each iteration. To perform the in-place method we start with the matrix $M$ and perform the updated algorithm shown in (Algorithm [[algo-2]]). At the beginning of each iteration $i$, we add an additional /step 0/ where we store the $i\text{th}$ column of the matrix and replace it with the $i\text{th}$ column of the identity. In /step 1/ we additionally swap the stored $i$ and $k$ elements. Then, in /step 2/ we divide by the stored $i\text{th}$ element rather than its current value. And finally in /step 3.1/ we multiply by the $j\text{th}$ stored element rather than the $i\text{th}$ element of the $j\text{th}$ row.
+The in-place method introduced by DasGupta [cite:@dasgupta:2013] saves us this extra computation by storing the only the column of the inverse necessary to complete each iteration. To perform the in-place method we start with the matrix $M$ and perform the updated algorithm shown in (Algorithm [[algo-2]]).
+
+At the beginning of each iteration $i$, we add an additional /step 0/ where we store the $i\text{th}$ column of the matrix and replace it with the $i\text{th}$ column of the identity. In /step 1/ we additionally swap the stored $i$ and $k$ elements. Then, in /step 2/ we divide by the stored $i\text{th}$ element rather than its current value. And finally in /step 3.1/ we multiply by the $j\text{th}$ stored element rather than the $i\text{th}$ element of the $j\text{th}$ row.
 
 #+CAPTION: In-Place Gauss-Jordan Elimination
 #+NAME: algo-2
